proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgf-proxy
  labels:
    stack: esgf
    component: proxy
spec:
  type: LoadBalancer
  #loadBalancerIP: "35.226.253.129"
  ports:
  - name: https
    port: 443
  - name: http
    port: 80
  selector:
    stack: esgf
    component: proxy
