proxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
  name: esgf-ingress
spec:
  tls:
  - hosts: 
    - esgf.192.168.64.12.xip.io
    secretName: esgf-hostcert
  rules:
  - host: esgf.192.168.64.12.xip.io
    http:
      paths:
      - path: /thredds
        backend:
          serviceName: esgf-tds
          servicePort: 8080
      - path: /esgf-idp
        backend:
          serviceName: esgf-idp-node
          servicePort: 8080
      - path: /solr
        backend:
          serviceName: esgf-solr
          servicePort: 8983
      - path: /esg-search
        backend:
          serviceName: esgf-index-node
          servicePort: 8080
      - path: /esg-orp
        backend:
          serviceName: esgf-orp
          servicePort: 8080
      - path: /esgf-auth
        backend:
          serviceName: esgf-auth
          servicePort: 8000
      - path: /esgf-slcs
        backend:
          serviceName: esgf-slcs
          servicePort: 8000
      - path: /
        backend:
          serviceName: esgf-cog
          servicePort: 8000
